<resources>
    <string name="app_name">Basic Math Trainer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="akshatha">Hey</string>
    <string name="do_your_math">Do your math</string>
    <string name="add">Add</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="square_root">Square Root</string>
    <string name="cube_root">Cube Root</string>
    <string name="subtract">Subtract</string>
    <string name="textviewwelcome_akshatha_this_is_an_app_to_train_you_to_improve_your_basic_math">Welcome, This is an app to help you improve your basic math. Use the Menu to navigate to your training.</string>
    <string name="squareroot_classroom">SquareRoot Classroom</string>
    <string name="back_to_main">Back to main</string>
    <string name="next">Next</string>
    <string name="division">Division</string>
    <string name="multiplier_corridor">Multiplier Corridor</string>
    <string name="subtractor_hall">Subtractor Hall</string>
    <string name="adder_prayer_hall">Adder Prayer Hall</string>
    <string name="cube">Cuberoot classroom</string>
    <string name="rem">Remainder</string>
    <string name="quotient">Quotient</string>
</resources>
