<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"

            android:title="@string/add" />

        <item android:id="@+id/nav_sub"

            android:title="@string/subtract"/>

        <item
            android:id="@+id/nav_multiply"

            android:title="@string/multiply" />
        <item
            android:id="@+id/nav_divide"

            android:title="@string/divide" />
        <item
            android:id="@+id/nav_sqroot"

            android:title="@string/square_root" />
        <item
            android:id="@+id/nav_cuberoot"

            android:title="@string/cube_root" />

    </group>

</menu>
